chore(podSpec): Separate podSpec from Jenkinsfile